// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopHeader: Component should render correctly 1`] = `
<styled.div>
  <Component
    buttonProps={
      Object {
        "id": "topHeaderOpenMenuBtn",
        "onClick": [Function],
      }
    }
  >
    <styled.div>
      <Styled(H2)
        id="headerTitle"
      >
        Projects
      </Styled(H2)>
      <Styled(H1)
        id="headerSubtitle"
      >
        Overview
      </Styled(H1)>
    </styled.div>
  </Component>
  <Component
    closeButtonProps={
      Object {
        "customStyles": Object {
          "backgroundColor": "transparent",
        },
        "id": "topHeaderCloseMenuButton",
      }
    }
    customStyles={
      Object {
        "maxWidth": null,
        "zIndex": 9999,
      }
    }
    onClose={[Function]}
    open={false}
  >
    <styled.div>
      <styled.div>
        <Styled(H2)
          id="headerTitle"
        >
          Projects
        </Styled(H2)>
        <Styled(H1)
          id="headerSubtitle"
        >
          Overview
        </Styled(H1)>
      </styled.div>
    </styled.div>
    <styled.div>
      <Styled(styled.ul)>
        <Styled(styled.li)
          active={false}
          hide={false}
          key="0"
        >
          <Link
            id={null}
            onClick={[Function]}
            to="/project"
          >
            <FormattedMessage
              defaultMessage="Projects"
              id="shared.components.desktopTopHeader.projects"
              values={Object {}}
            />
          </Link>
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={true}
          key="1"
        >
          <Link
            id="userBtn"
            onClick={[Function]}
            to="/user"
          >
            <FormattedMessage
              defaultMessage="Users"
              id="shared.components.desktopTopHeader.users"
              values={Object {}}
            />
          </Link>
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={false}
          id="logoutBtn"
          key="2"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Log out"
            id="shared.components.desktopTopHeader.logOut"
            values={Object {}}
          />
        </Styled(styled.li)>
      </Styled(styled.ul)>
      <Styled(styled.ul)>
        <Styled(styled.li)
          active={false}
          hide={false}
          key="0"
        >
          <Link
            id={null}
            onClick={[Function]}
            to="/"
          >
            <FormattedMessage
              defaultMessage="About Schema CMS"
              id="shared.components.desktopTopHeader.about"
              values={Object {}}
            />
          </Link>
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={false}
          key="1"
        >
          <Link
            id={null}
            onClick={[Function]}
            to="/"
          >
            <FormattedMessage
              defaultMessage="API Doc"
              id="shared.components.desktopTopHeader.api"
              values={Object {}}
            />
          </Link>
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={false}
          key="2"
        >
          <Link
            id={null}
            onClick={[Function]}
            to="/"
          >
            <FormattedMessage
              defaultMessage="GitHub Repository"
              id="shared.components.desktopTopHeader.repository"
              values={Object {}}
            />
          </Link>
        </Styled(styled.li)>
      </Styled(styled.ul)>
    </styled.div>
  </Component>
  <LogoutModal
    logoutModalOpen={false}
    onAction={[Function]}
    redirectUrl="/logout"
  />
</styled.div>
`;

exports[`TopHeader: Component should render correctly with custom menu 1`] = `
<styled.div>
  <Component
    buttonProps={
      Object {
        "id": "topHeaderOpenMenuBtn",
        "onClick": [Function],
      }
    }
  >
    <styled.div>
      <Styled(H2)
        id="headerTitle"
      >
        Projects
      </Styled(H2)>
      <Styled(H1)
        id="headerSubtitle"
      >
        Overview
      </Styled(H1)>
    </styled.div>
  </Component>
  <Component
    closeButtonProps={
      Object {
        "customStyles": Object {
          "backgroundColor": "transparent",
        },
        "id": "topHeaderCloseMenuButton",
      }
    }
    customStyles={
      Object {
        "maxWidth": null,
        "zIndex": 9999,
      }
    }
    onClose={[Function]}
    open={false}
  >
    <styled.div>
      <styled.div>
        <Styled(H2)
          id="headerTitle"
        >
          Projects
        </Styled(H2)>
        <Styled(H1)
          id="headerSubtitle"
        >
          Overview
        </Styled(H1)>
      </styled.div>
    </styled.div>
    <styled.div>
      <Styled(styled.ul)>
        <Styled(styled.li)
          active={false}
          hide={false}
          key="0"
        >
          <Link
            id={null}
            onClick={[Function]}
            to="/path"
          >
            Primary
          </Link>
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={false}
          key="1"
        >
          <Link
            id={null}
            onClick={[Function]}
            to="/path"
          >
            Charts
          </Link>
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={false}
          key="2"
        >
          <Link
            id={null}
            onClick={[Function]}
            to="/project"
          >
            <FormattedMessage
              defaultMessage="Projects"
              id="shared.components.desktopTopHeader.projects"
              values={Object {}}
            />
          </Link>
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={true}
          key="3"
        >
          <Link
            id="userBtn"
            onClick={[Function]}
            to="/user"
          >
            <FormattedMessage
              defaultMessage="Users"
              id="shared.components.desktopTopHeader.users"
              values={Object {}}
            />
          </Link>
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={false}
          id="logoutBtn"
          key="4"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Log out"
            id="shared.components.desktopTopHeader.logOut"
            values={Object {}}
          />
        </Styled(styled.li)>
      </Styled(styled.ul)>
      <Styled(styled.ul)>
        <Styled(styled.li)
          active={false}
          hide={false}
          key="0"
        >
          <Link
            id={null}
            onClick={[Function]}
            to="/path"
          >
            Secondary
          </Link>
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={false}
          id="id"
          key="1"
          onClick={[Function]}
        >
          Click action
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={false}
          key="2"
        >
          <Link
            id={null}
            onClick={[Function]}
            to="/"
          >
            <FormattedMessage
              defaultMessage="About Schema CMS"
              id="shared.components.desktopTopHeader.about"
              values={Object {}}
            />
          </Link>
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={false}
          key="3"
        >
          <Link
            id={null}
            onClick={[Function]}
            to="/"
          >
            <FormattedMessage
              defaultMessage="API Doc"
              id="shared.components.desktopTopHeader.api"
              values={Object {}}
            />
          </Link>
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={false}
          key="4"
        >
          <Link
            id={null}
            onClick={[Function]}
            to="/"
          >
            <FormattedMessage
              defaultMessage="GitHub Repository"
              id="shared.components.desktopTopHeader.repository"
              values={Object {}}
            />
          </Link>
        </Styled(styled.li)>
      </Styled(styled.ul)>
    </styled.div>
  </Component>
  <LogoutModal
    logoutModalOpen={false}
    onAction={[Function]}
    redirectUrl="/logout"
  />
</styled.div>
`;

exports[`TopHeader: Component should render correctly with project id 1`] = `
<styled.div>
  <Component
    buttonProps={
      Object {
        "id": "topHeaderOpenMenuBtn",
        "onClick": [Function],
      }
    }
  >
    <styled.div>
      <Styled(H2)
        id="headerTitle"
      >
        Projects
      </Styled(H2)>
      <Styled(H1)
        id="headerSubtitle"
      >
        Overview
      </Styled(H1)>
    </styled.div>
  </Component>
  <Component
    closeButtonProps={
      Object {
        "customStyles": Object {
          "backgroundColor": "transparent",
        },
        "id": "topHeaderCloseMenuButton",
      }
    }
    customStyles={
      Object {
        "maxWidth": null,
        "zIndex": 9999,
      }
    }
    onClose={[Function]}
    open={false}
  >
    <styled.div>
      <styled.div>
        <Styled(H2)
          id="headerTitle"
        >
          Projects
        </Styled(H2)>
        <Styled(H1)
          id="headerSubtitle"
        >
          Overview
        </Styled(H1)>
      </styled.div>
    </styled.div>
    <styled.div>
      <Styled(styled.ul)>
        <Styled(styled.li)
          active={false}
          hide={false}
          key="0"
        >
          <Link
            id={null}
            onClick={[Function]}
            to="/project"
          >
            <FormattedMessage
              defaultMessage="Projects"
              id="shared.components.desktopTopHeader.projects"
              values={Object {}}
            />
          </Link>
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={true}
          key="1"
        >
          <Link
            id="userBtn"
            onClick={[Function]}
            to="/user"
          >
            <FormattedMessage
              defaultMessage="Users"
              id="shared.components.desktopTopHeader.users"
              values={Object {}}
            />
          </Link>
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={false}
          key="2"
        >
          <Link
            id={null}
            onClick={[Function]}
            to="/project/projectId"
          >
            <FormattedMessage
              defaultMessage="Project details"
              id="shared.components.desktopTopHeader.projectDetails"
              values={Object {}}
            />
          </Link>
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={false}
          key="3"
        >
          <Link
            id={null}
            onClick={[Function]}
            to="/project/projectId/datasource"
          >
            <FormattedMessage
              defaultMessage="Data Sources"
              id="shared.components.desktopTopHeader.projectDataSources"
              values={Object {}}
            />
          </Link>
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={false}
          key="4"
        >
          <Link
            id={null}
            onClick={[Function]}
            to="/project/projectId/folder"
          >
            <FormattedMessage
              defaultMessage="Pages"
              id="shared.components.desktopTopHeader.projectPages"
              values={Object {}}
            />
          </Link>
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={false}
          id="logoutBtn"
          key="5"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Log out"
            id="shared.components.desktopTopHeader.logOut"
            values={Object {}}
          />
        </Styled(styled.li)>
      </Styled(styled.ul)>
      <Styled(styled.ul)>
        <Styled(styled.li)
          active={false}
          hide={false}
          key="0"
        >
          <Link
            id={null}
            onClick={[Function]}
            to="/"
          >
            <FormattedMessage
              defaultMessage="About Schema CMS"
              id="shared.components.desktopTopHeader.about"
              values={Object {}}
            />
          </Link>
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={false}
          key="1"
        >
          <Link
            id={null}
            onClick={[Function]}
            to="/"
          >
            <FormattedMessage
              defaultMessage="API Doc"
              id="shared.components.desktopTopHeader.api"
              values={Object {}}
            />
          </Link>
        </Styled(styled.li)>
        <Styled(styled.li)
          active={false}
          hide={false}
          key="2"
        >
          <Link
            id={null}
            onClick={[Function]}
            to="/"
          >
            <FormattedMessage
              defaultMessage="GitHub Repository"
              id="shared.components.desktopTopHeader.repository"
              values={Object {}}
            />
          </Link>
        </Styled(styled.li)>
      </Styled(styled.ul)>
    </styled.div>
  </Component>
  <LogoutModal
    logoutModalOpen={false}
    onAction={[Function]}
    redirectUrl="/logout"
  />
</styled.div>
`;
